Captions new updates

--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hoyoverse</title>
+    <title>Profile</title>
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-    <div>VÀ OKE CHÚNG TA CHƠI CÁI CON GAME GENSHIN IMPACT NHAAAAA!!!</div>
+   <div>- GIỚI THIỆU BẢN THÂN -</div>
+   <img src="https://scontent-xsp1-3.xx.fbcdn.net/v/t39.30808-6/370884841_284984684250354_7977367486825592272_n.jpg?stp=dst-jpg_p843x403&_nc_cat=107&ccb=1-7&_nc_sid=49d041&_nc_ohc=wz6Q2me1gvkAX-VslP5&_nc_ht=scontent-xsp1-3.xx&oh=00_AfCpJyXHtHl0UfUlssfVTH8j8gi2_TkH48XkqfRGXxaacw&oe=65077089" alt="" class="imageChange">
+   <H1>Tên: Nguyễn Tuấn Hùng</H1>
+   <H1>Lớp: 11 - Trường: THPT Tùng Thiện</H1>
+   <H1>Nơi ở hiện tại: Xã Cổ Đông - TX. Sơn Tây - TP. Hà Nội</H1>
+   <H1>Hobbies: Bóng Đá, Gacha "đồ chơi", Du Lịch</H1>
 </body>
 </html>
